@@ -1,0 +1,23 @@
+<html>
+<head>
+<script>
+function test() {
+    if (window.testRunner) {
+        window.testRunner.dumpAsText();
+    }
+    var SVG_NAMESPACE = "http://www.w3.org/2000/svg";
+    var svgDocument = document.implementation.createDocument(SVG_NAMESPACE, "svg", null);
+
+    svgDocument.addEventListener("DOMNodeInserted", () => {
+        var a = svgDocument.querySelector("title").remove();
+    });
+    svgDocument.title = "abc"
+}
+test()
+</script>
+</head>
+<body>
+    <p>Test that setting title of a SVG document while there is a registred DOMNodeInserted event handler which indirectly deletes title doesn't crash.
+    </p>
+</body>
+</html>
