@@ -1,0 +1,21 @@
+<html>
+<head>
+<script>
+function test() {
+    if (window.testRunner) {
+        window.testRunner.dumpAsText();
+    }
+
+    window.top.addEventListener("DOMNodeInserted", () => {
+        document.head.innerHTML = 123;
+    }, {once : true});
+    document.title = "abc";
+}
+test()
+</script>
+</head>
+<body>
+    <p>Test that setting title while there is a registred DOMNodeInserted event handler which indirectly deletes title doesn't crash.
+    </p>
+</body>
+</html>
