@@ -1,3 +1,15 @@
+2019-11-19  Sunny He  <sunny_he@apple.com>
+
+        Nullptr crash in Node::setTextContent via Document::setTitle if title element is removed before setTextContent call.
+        https://bugs.webkit.org/show_bug.cgi?id=204332
+
+        Reviewed by Ryosuke Niwa.
+
+        Test: fast/dom/Document/title-property-set-with-dom-event.html
+
+        * dom/Document.cpp:
+        (WebCore::Document::setTitle):
+
 2019-11-19  Youenn Fablet  <youenn@apple.com>
 
         Introduce a mock implementation of CoreAudioSharedUnit
